src/app/layouts/main/main.component.scss
.mat-toolbar-box-shadow {
	box-shadow: 0 2px 16px rgba(167, 104, 104, 0.1);
}

.app-container {
	background-color: #dee8ff;
	display: flex;
	flex-direction: column;
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	overflow-x: hidden;
	width: 100%;
	height: 100%;

	h1 {
		.app-name {
			margin-left: 8px;
		}
	}

	.toolbar {
		width: 100%;
		display: inline-grid;
		grid-template-columns: 1fr 1fr;
		// background-color: var(--navigation-background-color);
		z-index: 100;
		position: relative;
		align-content: center;

		.left {
			display: grid;
			grid-template-columns: 40px 1fr;
			grid-template-rows: 42px;
			grid-gap: 5px;

			.burger-menu {
				font-size: 20px;
			}

			.branding-container {
				text-decoration: none;
				display: grid;
				grid-template-columns: 40px 1fr;
				align-items: center;

				&:visited {
					color: inherit;
				}

				.logo-container {
					display: none;
					border-radius: 5px;

					img {
						width: 25px;
						height: 25px;
						margin-top: 10px;
					}
				}

				.app-name {
					align-self: center;
					// color: #3C3C3C;

					p {
						margin: 0;
						// color: white;
						font-family: "Raleway", sans-serif;
						font-weight: 200;
						text-transform: uppercase;
						letter-spacing: 8px;
						font-size: 14px;
					}
				}
			}
		}

		.right {
			display: inline-grid;
			align-self: center;
			align-content: center;
			align-items: center;
			grid-template-columns: 35px 35px;
			justify-content: center;
			justify-self: end;
			justify-items: center;
			grid-gap: 5px;

			.app-search {
				cursor: pointer;
				text-align: center;
			}

			.share-resource {
				cursor: pointer;
				fa-icon {
					font-size: 14px;
				}
			}
		}
	}

	.profile-container {
		width: 100%;
		grid-column-end: end;

		.profile-image {
			float: right;
		}
	}

	.is-mobile {
		.toolbar {
			position: fixed;
			z-index: 2;
		}

		.sidenav-container {
			flex: 1 0 auto;
		}
	}

	.sidenav-container {
		flex: 1;

		.app-name {
			font-family: "Raleway", sans-serif;
			font-weight: 200;
			text-transform: uppercase;
			letter-spacing: 10px;
			text-decoration: none;
			display: none;
		}

		h4 {
			font-size: 14px;
		}

		a {
			font-size: 14px;
			transition: all 0.3s ease-in-out;
			margin-bottom: 15px;

			&:hover {
				background-color: rgba(0,0,0,.1);
				border-radius: 5px;
				padding-left: 10px;
			}
		}

		.dark-theme-toggle {
			display: grid;
			grid-template-columns: 1fr 1fr;
			p {
				margin: 0;
				font-size: 14px;
				align-self: center;
			}

			mat-slide-toggle {
				justify-self: end;
			}
		}
	}

	mat-sidenav {
		padding: 15px 25px 0 25px !important;
	}

	mat-sidenav-container {
		margin-top: 0 !important;
	}
}

.thick-border {
	border: 1px solid rgba(0, 0, 0, 1) !important;
}

@media (min-width: 320px) and (max-width: 420px) {}

@media (min-width: 768px) {
	.app-container {
		.toolbar {
			grid-template-columns: 1fr 1fr;

			.left {
				.burger-menu {
					font-size: 24px;
				}

				.branding-container {
					.app-name {
						p {
							display: inherit;
							font-size: inherit;
						}
					}
				}
			}

			.right {
				grid-template-columns: 1fr 50px;
				
				.app-search {
					margin-right: 15px;
				}

				.share-resource {
					fa-icon {
						font-size: inherit;
					}
				}
			}
		}
	}
}

